Make use of Java 17 features in o.e.ui.tests